maze.shortestpath.ShortestPathMaze.scala.error
Erreur de compilation :
ShortestPathMaze:14: error: ';' expected but ',' found.
    setIndication(x,y-1,sol+1), marquage(x,y-1,sol+1)
                              ^ShortestPathMaze:17: error: ';' expected but ',' found.
    setIndication(x-1,y,sol+1), marquage(x-1,y,sol+1)
                              ^ShortestPathMaze:20: error: ';' expected but ',' found.
    setIndication(x+1,y,sol+1), marquage(x+1,y,sol+1)
                              ^ShortestPathMaze:23: error: ';' expected but ',' found.
    setIndication(x,y+1,sol+1), marquage(x,y+1,sol+1)
                              ^